Fixed feature list spacing

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -347,8 +347,8 @@
     width: 30px;
     height: 150px;
   }
-  .features-table {
-    border-spacing: 30px;
+  #features-table {
+    border-spacing: 20px 2px;
     border-collapse: separate;
   }
 
